k8s-manifests/overlays/gcp/istio/peer-authentication-databases.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgresql-mtls-disable
  namespace: titanium-prod
spec:
  selector:
    matchLabels:
      app: postgresql
  mtls:
    mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: redis-mtls-disable
  namespace: titanium-prod
spec:
  selector:
    matchLabels:
      app: redis
  mtls:
    mode: DISABLE
