k8s-manifests/overlays/gcp/istio/kiali-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
spec:
  type: NodePort
  ports:
    - name: http
      port: 20001
      protocol: TCP
      targetPort: 20001
      nodePort: 31200
