k8s-manifests/overlays/gcp/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-mtls
  namespace: titanium-prod
spec:
  host: "*.titanium-prod.svc.cluster.local"
  exportTo:
    - "."
  trafficPolicy:
    tls:
      mode: DISABLE  # Temporary: ISTIO_MUTUAL -> DISABLE for Ingress Gateway compatibility
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgresql-service-disable-mtls
  namespace: titanium-prod
spec:
  host: postgresql-service
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: redis-disable-mtls
  namespace: titanium-prod
spec:
  host: prod-redis-service
  trafficPolicy:
    tls:
      mode: DISABLE
